feat: Support custom scheme file creation, edit and get errors. (#1531)